[workspace]

members = [
	"cloud_server",
	"data_transfer_objects",
	"motor_driver",
	"motor_monitor_cs",
	"motor_monitor_rx",
	"pico_sensor",
	"sensor",
	"sensor_driver",
	"test_driver",
	"utils",
]

default-members = [
	"cloud_server",
	"data_transfer_objects",
	"motor_driver",
	"motor_monitor_cs",
	"motor_monitor_rx",
	"sensor",
	"sensor_driver",
	"test_driver",
	"utils",
]
