[workspace]

members = [
	"bench_executor",
	"cloud_server",
	"data_aggregator",
	"data_transfer_objects",
	"motor_driver",
	"motor_monitor_cs",
	"motor_monitor_rx",
	"motor_monitor_sql",
	"motor_monitor_oo",
	"pico_sensor",
	"sensor",
	"sensor_driver",
	"test_driver",
	"utils",
	"scheduler"
]

default-members = [
	"bench_executor",
	"cloud_server",
	"data_transfer_objects",
	"motor_driver",
	"motor_monitor_cs",
	"motor_monitor_rx",
	"sensor",
	"sensor_driver",
	"test_driver",
	"utils",
]
