[package]
name = "bench_executor"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.7.0"
env_logger = "0.10.0"
log = "0.4.17"
data_transfer_objects = { path = "../data_transfer_objects" }
utils = { path = "../utils" }
serde = { version = "1.0.152", features = ["derive"] }
bollard = "0.14.0"
futures = "0.3"
tokio = { version = "1.24.2", features = ["macros"] }
