[package]
name = "cloud_server"
version = "0.1.0"
edition = "2021"

[dependencies]
data_transfer_objects = { path = "../data_transfer_objects" }
postcard = "1.0.2"
serde = { version = "1.0", default-features = false }
libc = { version = "0.2", default-features = false }
serde_json = "1.0.85"
env_logger = "0.9.1"
log = "0.4"