[package]
name = "data_transfer_objects"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"]}
libc = { version = "0.2", default-features = false, optional = true }

[features]
default = ["std"]
std = ["dep:libc"]