[package]
name = "motor_driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postcard = { version = "1.0.2", features = ["alloc"] }
serde = { version = "1.0", default-features = false }
data_transfer_objects = { path = "../data_transfer_objects" }
threadpool = "1.8.1"
toml = "0.5.9"
utils = { path = "../utils" }
env_logger = "0.9.1"
log = "0.4"
rppal = { version = "0.14.0", optional = true }

[features]
rpi = ["dep:rppal"]