[package]
name = "motor_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
data_transfer_objects = { path = "../data_transfer_objects" }
utils = { path = "../utils" }
postcard = { version = "1.0.2", features = ["alloc"] }
threadpool = "1.8.1"
libc = { version = "0.2", default-features = false }
procfs = { version = "0.14.1", default-features = false }