[package]
name = "motor_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
data_transfer_objects = { path = "../data_transfer_objects" }
utils = { path = "../utils" }
postcard = { version = "1.0.2", features = ["alloc"] }
threadpool = "1.8.1"
procfs = { version = "0.14.1", default-features = false }
rppal = { version = "0.14.0", optional = true }

[features]
rpi = ["dep:rppal"]