[package]
name = "motor_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
data_transfer_objects = { path = "../data_transfer_objects" }
utils = { path = "../utils" }
postcard = { version = "1.0.2", features = ["alloc"] }
procfs = { version = "0.14.1", default-features = false }
rppal = { version = "0.14.0", optional = true }
futures = { version = "0.3.25", features = ["thread-pool"]}
rx_rust_mp = { tag = "0.6.1", git = "https://github.com/AntonOellerer/rx_rust_mp"}


[features]
rpi = ["dep:rppal"]