[package]
name = "motor_monitor_rx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data_transfer_objects = { path = "../data_transfer_objects" }
utils = { path = "../utils" }
postcard = { version = "1.0.2", features = ["alloc"] }
procfs = { version = "0.14.2", default-features = false }
rppal = { version = "0.14.1", optional = true }
rx_rust_mp = { tag = "0.6.1", git = "https://github.com/AntonOellerer/rx_rust_mp"}
futures = { version = "0.3.25", features = ["thread-pool"]}

gettid = "0.1.2"
[features]
rpi = ["dep:rppal"]