[package]
name = "motor_monitor_rx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data_transfer_objects = { path = "../data_transfer_objects" }
utils = { path = "../utils" }
postcard = { version = "1.0.2", features = ["alloc"] }
#rppal = { version = "0.14.1", optional = true }
rx_rust_mp = "0.7.1"
futures = { version = "0.3.25", features = ["thread-pool"]}
env_logger = "0.10.0"
log = "0.4.17"

#[features]
#rpi = ["dep:rppal"]