[package]
name = "pico_sensor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.7"
data_transfer_objects = { path = "../data_transfer_objects", default-features = false }
embedded-hal = "0.2.5"
fugit = "0.3.6"
panic-halt = "0.2.0"
postcard = "1.0.2"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
rp2040-hal = "0.6.0"
rp-pico = "0.5.0"