[package]
name = "sensor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data_transfer_objects = { path = "../data_transfer_objects" }
procfs = { version = "0.14.2", default-features = false }
rand = { version = "0.8.5", features = ["small_rng"] }
postcard = { version = "1.0.2", features = ["alloc"] }
serde = { version = "1.0", default-features = false }
libc = { version = "0.2", default-features = false }