[package]
name = "test_driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
data_transfer_objects = { path = "../data_transfer_objects" }
utils = { path = "../utils" }
postcard = { version = "1.0.2", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"
libc = { version = "0.2", default-features = false }
env_logger = "0.9.1"
log = "0.4"
rand = { version = "0.8.5", features = ["small_rng"] }