[package]
name = "test_driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.3", features = ["derive"] }
data_transfer_objects = { path = "../data_transfer_objects" }
utils = { path = "../utils" }
postcard = { version = "1.0.2", features = ["alloc"] }
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.6.0"
env_logger = "0.10.0"
log = "0.4.17"
rand = { version = "0.8.5", features = ["small_rng"] }