[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postcard = "1.0.2"
serde = { version = "1.0", default-features = false }
log = { version = "0.4", optional = true }
libc = { version = "0.2", default-features = false }

[features]
default = ["std"]
std = ["dep:log"]