[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postcard = "1.0.2"
serde = { version = "1.0", default-features = false }
log = { version = "0.4.17", optional = true }
data_transfer_objects = { path = "../data_transfer_objects", optional = true }
procfs = { version = "0.15.1", default-features = false, optional = true}

[features]
default = ["std"]
std = ["dep:log", "dep:data_transfer_objects", "postcard/alloc", "dep:procfs"]